--- a/public_html/pages/courses.html
+++ b/public_html/pages/courses.html
@@ -147,7 +147,7 @@
               <img src="../images/course 1.png" alt="" class="image" />
             </div>
             <div class="absolute transform -translate-x-1/2 bottom-8 left-1/2">
-              <a href="#admission-redirect" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
+              <a href="/#enrollnowform" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
                 Get Admission
               </a>
             </div>
@@ -161,7 +161,7 @@
               <img src="../images/course 2.png" alt="" class="image" />
             </div>
             <div class="absolute transform -translate-x-1/2 bottom-8 left-1/2">
-              <a href="#admission-redirect" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
+              <a href="/#enrollnowform" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
                 Get Admission
               </a>
             </div>
@@ -175,7 +175,7 @@
               <img src="../images/course 3.png" alt="" class="image" />
             </div>
             <div class="absolute transform -translate-x-1/2 bottom-8 left-1/2">
-              <a href="#admission-redirect" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
+              <a href="/#enrollnowform" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
                 Get Admission
               </a>
             </div>
@@ -189,7 +189,7 @@
               <img src="../images/course 4.png" alt="" class="image" />
             </div>
             <div class="absolute transform -translate-x-1/2 bottom-8 left-1/2">
-              <a href="#admission-redirect" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
+              <a href="/#enrollnowform" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
                 Get Admission
               </a>
             </div>
@@ -203,7 +203,7 @@
               <img src="../images/course 5.png" alt="" class="image" />
             </div>
             <div class="absolute transform -translate-x-1/2 bottom-8 left-1/2">
-              <a href="#admission-redirect" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
+              <a href="/#enrollnowform" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
                 Get Admission
               </a>
             </div>
@@ -217,7 +217,7 @@
               <img src="../images/course 6.png" alt="" class="image" />
             </div>
             <div class="absolute transform -translate-x-1/2 bottom-8 left-1/2">
-              <a href="#admission-redirect" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
+              <a href="/#enrollnowform" class="px-6 py-2 text-black transition duration-300 ease-in-out bg-yellow-400 rounded-xl hover:bg-yellow-500 hover:scale-105 hover:shadow-lg">
                 Get Admission
               </a>
             </div>
