--- a/public_html/pages/student.html
+++ b/public_html/pages/student.html
@@ -1001,11 +1001,11 @@ input[type=submit]:hover {
 
     <section class="alumni" id="alumni">
       <div class="container alumni__container">
-        <div class="container text-4xl font-bold text-center lg:text-5xl ">
+        <div class="container text-4xl font-bold text-center lg:text-5xl">
           Alumni Registration
         </div>
 
-        <form action="/submit-alumni" method="POST" class="alumni-reg">
+        <form id="alumniForm" class="alumni-reg">
           <h2>Personal Info</h2>
           <div>
             <input type="text" name="firstName" placeholder="First Name"
@@ -1020,40 +1020,22 @@ input[type=submit]:hover {
 
           <h2>Association with PN</h2>
           <div>
-            <!-- <input type="text" name="class" placeholder="Class" required /> -->
-            <select class="form-class" name="class">
+            <select class="form-class" name="class" required>
               <option value>Select Class</option>
               <option value="class6">Class 6</option>
               <option value="class7">Class 7</option>
               <option value="class8">Class 8</option>
               <option value="class9">Class 9</option>
               <option value="class10">Class 10</option>
-
               <option value="class11C">Class 11 Commerce</option>
               <option value="class11S">Class 11 Science</option>
-
               <option value="class12C">Class 12 Commerce</option>
               <option value="class12S">Class 12 Science</option>
             </select>
-            <!-- <input type="text" name="year" placeholder="Year" required /> -->
-            <select class="form-class" name="year" id="year-select">
+
+            <select class="form-class" name="year" id="year-select" required>
               <option value>Year</option>
             </select>
-            <script>
-              // Dynamically populate year options from 2010 to current year
-              (function() {
-                var yearSelect = document.getElementById('year-select');
-                if (yearSelect) {
-                  var currentYear = new Date().getFullYear();
-                  for (var y = 2010; y <= currentYear; y++) {
-                    var opt = document.createElement('option');
-                    opt.value = y;
-                    opt.textContent = y;
-                    yearSelect.appendChild(opt);
-                  }
-                }
-              })();
-            </script>
           </div>
 
           <h2>Other Information (Optional)</h2>
@@ -1073,81 +1055,134 @@ input[type=submit]:hover {
               placeholder="If Student - Pursuing what?" />
           </div>
 
-          <!-- <input type="hidden" name="_captcha" value="false" />
-      <input type="hidden" name="_next" value="https://pninstitute.vercel.app/pages/thank.html" /> -->
-
           <button type="submit" class="button">Submit</button>
         </form>
+
+        <div id="formMessage"
+          class="hidden px-4 py-3 mt-4 text-lg font-medium text-center bg-white rounded-md shadow-lg"></div>
       </div>
     </section>
+
+    <script>
+    // Populate years
+    const yearSelect = document.getElementById("year-select");
+    const currentYear = new Date().getFullYear();
+    for (let y = 2010; y <= currentYear; y++) {
+      const option = document.createElement("option");
+      option.value = y;
+      option.textContent = y;
+      yearSelect.appendChild(option);
+    }
+
+    // Form submission
+    const form = document.getElementById("alumniForm");
+    const messageEl = document.getElementById("formMessage");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const formData = new FormData(form);
+      const data = {};
+      formData.forEach((val, key) => {
+        data[key] = val;
+      });
+
+      try {
+        const res = await fetch("https://pn-form-apis.onrender.com/send-alumni-form", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(data)
+        });
+
+        if (res.ok) {
+          messageEl.textContent =
+            "Thank you! Your registration has been submitted successfully.";
+          messageEl.classList.remove("hidden", "text-red-600");
+          messageEl.classList.add("text-green-600");
+          form.reset();
+        } else {
+          messageEl.textContent =
+            "There was an issue submitting the form. Please try again.";
+          messageEl.classList.remove("hidden", "text-green-600");
+          messageEl.classList.add("text-red-600");
+        }
+
+        // Hide message after 5 seconds
+        setTimeout(() => {
+          messageEl.classList.add("hidden");
+        }, 5000);
+      } catch (err) {
+        messageEl.textContent =
+          "Server error. Please try again later.";
+        messageEl.classList.remove("hidden", "text-green-600");
+        messageEl.classList.add("text-red-600");
+
+        setTimeout(() => {
+          messageEl.classList.add("hidden");
+        }, 5000);
+      }
+    });
+    </script>
 
     <section class="add-review" id="review">
       <div class="container add-review__container">
 
-        <div class="container text-4xl font-bold text-center lg:text-5xl ">
+        <div class="container text-4xl font-bold text-center lg:text-5xl">
           Give Us a Review
         </div>
 
-        <form action="/submit-review" method="POST"
+        <form
+          id="reviewForm"
           class="registration-form max-w-[80%] mx-auto"
-          data-aos="fade-left" enctype="multipart/form-data">
+          enctype="multipart/form-data">
           <div class="row">
-            <div class="col-25">
-              <label for="firstname">Name</label>
-            </div>
+            <div class="col-25"><label for="firstname">Name</label></div>
             <div class="col-75">
               <input type="text" id="firstname" name="name"
                 placeholder="Your name.." required />
             </div>
           </div>
+
           <div class="row">
-            <div class="col-25">
-              <label for="class">Class</label>
-            </div>
+            <div class=" col-25"><label for="class">Class</label></div>
             <div class="col-75">
-              <!-- <input type="text" id="class" name="selectClass" placeholder="Class" required /> -->
-              <select class="form-class" name="selectClass">
+              <select class="form-class" name="selectClass" required>
                 <option value>Select Class</option>
                 <option value="class6">Class 6</option>
                 <option value="class7">Class 7</option>
                 <option value="class8">Class 8</option>
                 <option value="class9">Class 9</option>
                 <option value="class10">Class 10</option>
-
                 <option value="class11C">Class 11 Commerce</option>
                 <option value="class11S">Class 11 Science</option>
-
                 <option value="class12C">Class 12 Commerce</option>
                 <option value="class12S">Class 12 Science</option>
               </select>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-25">
-              <label for="contact">Contact</label>
-            </div>
+            <div class="col-25"><label for="contact">Contact</label></div>
             <div class="col-75">
               <input type="text" id="contact" name="contact"
                 placeholder="Mobile number" required />
             </div>
           </div>
+
           <div class="row">
-            <div class="col-25">
-              <label for="year">Year</label>
-            </div>
+            <div class="col-25"><label for="year">Year</label></div>
             <div class="col-75">
-              <!-- <input type="text" id="year" name="year" placeholder="Year" required /> -->
-              <select class="form-class" name="year">
+              <select class="form-class" name="year" required>
                 <option value>Year</option>
                 <option value="2010">2010</option>
                 <option value="2011">2011</option>
                 <option value="2012">2012</option>
                 <option value="2013">2013</option>
                 <option value="2014">2014</option>
-
                 <option value="2015">2015</option>
                 <option value="2016">2016</option>
-
                 <option value="2018">2018</option>
                 <option value="2019">2019</option>
                 <option value="2020">2020</option>
@@ -1158,35 +1193,88 @@ input[type=submit]:hover {
               </select>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-25">
-              <label for="attachment">Photo</label>
-            </div>
+            <div class="col-25"><label for="attachment">Photo</label></div>
             <div class="col-75">
               <input type="file" id="attachment" name="attachment"
-                accept="image/png, image/jpeg" placeholder="Upload a Photo">
+                accept="image/png, image/jpeg" />
             </div>
           </div>
+
           <div class="row">
-            <div class="col-25">
-              <label for="subject">Message</label>
-            </div>
+            <div class="col-25"><label for="subject">Message</label></div>
             <div class="col-75">
-              <textarea id="subject" name="subject"
-                placeholder="Write something.." style="height:200px"
+              <textarea
+                id="subject"
+                name="subject"
+                placeholder="Write something.."
+                style="height:200px"
                 required></textarea>
             </div>
           </div>
-          <br><br>
-          <!-- <input type="hidden" name="_captcha" value="false"> -->
-          <!-- <input type="hidden" name="_next" value="https://pninstitute.vercel.app/pages/thank.html"> -->
+
+          <br /><br />
+
           <div class="row">
-            <center><button type="submit" class="form-submit button"
-                id="form-submit">Submit</button></center>
+            <button type="submit" class="form-submit button" id="form-submit">
+              Submit
+            </button>
           </div>
+
+          <!-- ✅ Success/Error Message -->
+          <div
+            id="reviewFormMessage"
+            class="hidden px-4 py-3 mt-4 text-lg font-medium text-center bg-white rounded-md shadow-lg"></div>
+
         </form>
       </div>
     </section>
+    <script>
+    // Review form submission
+    const reviewForm = document.getElementById("reviewForm");
+    const reviewMessageEl = document.getElementById("reviewFormMessage");
+
+    reviewForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const formData = new FormData(reviewForm);
+
+      try {
+        const res = await fetch("https://pn-form-apis.onrender.com/send-review-form", {
+          method: "POST",
+          body: formData,
+        });
+
+        const result = await res.json();
+
+        if (res.ok) {
+          reviewMessageEl.textContent = "Thank you! Your review has been submitted successfully.";
+          reviewMessageEl.classList.remove("hidden", "text-red-600");
+          reviewMessageEl.classList.add("text-green-600");
+          reviewForm.reset();
+        } else {
+          reviewMessageEl.textContent = result.message || "There was an issue submitting the form. Please try again.";
+          reviewMessageEl.classList.remove("hidden", "text-green-600");
+          reviewMessageEl.classList.add("text-red-600");
+        }
+
+        // ⏳ Hide the message after 5 seconds
+        setTimeout(() => {
+          reviewMessageEl.classList.add("hidden");
+        }, 5000);
+      } catch (error) {
+        console.error("Error submitting form:", error);
+        reviewMessageEl.textContent = "❌ Something went wrong. Please try again later.";
+        reviewMessageEl.classList.remove("hidden", "text-green-600");
+        reviewMessageEl.classList.add("text-red-600");
+
+        setTimeout(() => {
+          reviewMessageEl.classList.add("hidden");
+        }, 5000);
+      }
+    });
+    </script>
 
     <!-- <section class="reviews" id="testimonials">
       <h2 class="section__title">Testimonials</h2>
