--- a/public_html/pages/contact.html
+++ b/public_html/pages/contact.html
@@ -233,8 +233,12 @@
               <textarea name="subject" placeholder="Message" id="message"
                 cols="30"
                 rows="5" required></textarea>
-              <button type="submit" id="sub" class="button">Send
-                Message</button>
+              <div class="mx-auto w-fit">
+
+                <button type="submit" id="sub"
+                  class="bg-[#A33A17] px-4 py-2 text-white rounded-md shadow-md hover:bg-[#8c2d14] transition duration-300 ease-in-out">Send
+                  Message</button>
+              </div>
 
               <!-- Success/Error Messages -->
               <div id="formMessage"
@@ -564,7 +568,7 @@
         <section
           class=" bg-[#0A0A23] text-center text-white text-sm py-4 border-t border-white/10">
           <div class="container">
-            &copy; Copyright 2024. All Rights Reserved by PN Institute
+            &copy; Copyright 2025. All Rights Reserved by PN Institute
           </div>
         </section>
 
