--- a/public_html/pages/student.html
+++ b/public_html/pages/student.html
@@ -1054,12 +1054,15 @@ input[type=submit]:hover {
             <input type="text" name="studentWhat"
               placeholder="If Student - Pursuing what?" />
           </div>
+          <div class="mx-auto mt-6 w-fit">
 
-          <button type="submit" class="button">Submit</button>
+            <button type="submit"
+              class="bg-[#A33A17] px-4 py-2 text-white rounded-md shadow-md hover:bg-[#8c2d14] transition duration-300 ease-in-out">Submit</button>
+          </div>
         </form>
 
         <div id="formMessage"
-          class="hidden px-4 py-3 mt-4 text-lg font-medium text-center bg-white rounded-md shadow-lg"></div>
+          class="hidden px-4 py-3 mt-4 text-lg font-medium text-center w-fit"></div>
       </div>
     </section>
 
@@ -1190,6 +1193,7 @@ input[type=submit]:hover {
                 <option value="2022">2022</option>
                 <option value="2023">2023</option>
                 <option value="2024">2024</option>
+                <option value="2024">2025</option>
               </select>
             </div>
           </div>
@@ -1216,8 +1220,10 @@ input[type=submit]:hover {
 
           <br /><br />
 
-          <div class="row">
-            <button type="submit" class="form-submit button" id="form-submit">
+          <div class="mx-auto row w-fit">
+            <button type="submit"
+              class="form-submit  bg-[#A33A17] px-4 py-2 text-white rounded-md shadow-md hover:bg-[#8c2d14] transition duration-300 ease-in-out"
+              id="form-submit">
               Submit
             </button>
           </div>
@@ -1625,7 +1631,7 @@ input[type=submit]:hover {
     <section
       class=" bg-[#0A0A23] text-center text-white text-sm py-4 border-t border-white/10">
       <div class="container">
-        &copy; Copyright 2024. All Rights Reserved by PN Institute
+        &copy; Copyright 2025. All Rights Reserved by PN Institute
       </div>
     </section>
 
