--- a/public_html/pages/pace.html
+++ b/public_html/pages/pace.html
@@ -1699,7 +1699,7 @@
             };
             
             // Send API request
-            const response = await fetch('http://localhost:8081/send-pace-form', {
+            const response = await fetch('https://pn-form-apis.onrender.com/send-pace-form', {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json',
